@@ -1,4 +1,4 @@
-.TH SG_COPY_RESULTS "8" "May 2014" "sg3_utils\-1.39" SG3_UTILS
+.TH SG_COPY_RESULTS "8" "September 2014" "sg3_utils\-1.40" SG3_UTILS
 .SH NAME
 sg_copy_results \- send SCSI RECEIVE COPY RESULTS command (XCOPY related)
 .SH SYNOPSIS
@@ -83,6 +83,10 @@ length and is the maximum (byte) size of the response. \fIBTL\fR must be
 less than 10000 and defaults to 520.
 .SH NOTES
 Decoding of \fIRECEIVE DATA\fR service action is not implemented.
+.PP
+In a similar way the functionality of sg_xcopy has been ported to the
+more general ddpt utility (and package), the functionality of this utility
+has been ported to the ddptctl utility.
 .SH EXAMPLES
 Query the operating parameters for a device:
 .PP
@@ -119,4 +123,4 @@ Copyright \(co 2012\-2014 Hannes Reinecke and Douglas Gilbert
 This software is distributed under a FreeBSD license. There is NO
 warranty; not even for MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
 .SH "SEE ALSO"
-.B sg_xcopy(sg3_utils)
+.B sg_xcopy(sg3_utils), ddpt,ddptctl(ddpt)
