@@ -2,7 +2,7 @@ sg3-utils (1.40-0.1) unstable; urgency=low
 
   * New upstream version
 
- -- Douglas Gilbert <dgilbert@interlog.com>  Fri, 29 Aug 2014 13:00:00 -0400
+ -- Douglas Gilbert <dgilbert@interlog.com>  Wed, 10 Sep 2014 23:00:00 -0400
 
 sg3-utils (1.39-0.1) unstable; urgency=low
 
